Logbook Changelog
=================

Here you can see the full list of changes between each Logbook release.

Version 0.4
-----------

Release date to be announced.  Codename to be selected.

- Added :class:`logbook.notifiers.NotifoHandler`

Version 0.3
-----------

Released on October 23rd.  Codename "Informant"

- Added :class:`logbook.more.ColorizingStreamHandlerMixin` and
  :class:`logbook.more.ColorizedStderrHandler`
- Deprecated :class:`logbook.RotatingFileHandlerBase` because the
  interface was not flexible enough.
- Provided basic Python 3 compatibility.  This did cause a few smaller
  API changes that caused minimal changes on Python 2 as well.  The
  deprecation of the :class:`logbook.RotatingFileHandlerBase` was a
  result of this.
- Added support for Python 2.4
- Added batch emitting support for handlers which now makes it possible
  to use the :class:`logbook.more.FingersCrossedHandler` with the
  :class:`logbook.MailHandler`.
- Moved the :class:`~logbook.FingersCrossedHandler` handler into the
  base package.  The old location stays importable for a few releases.
- Added :class:`logbook.GroupHandler` that buffers records until the
  handler is popped.
- Added :class:`logbook.more.ExternalApplicationHandler` that executes
  an external application for each log record emitted.

Version 0.2.1
-------------

Bugfix release, Released on September 22nd.

- Fixes Python 2.5 compatibility.

Version 0.2
-----------

Released on September 21st.  Codename "Walls of Text"

- Implemented default with statement for handlers which is an
  alias for `threadbound`.
- `applicationbound` and `threadbound` return the handler now.
- Implemented channel recording on the log records.
- The :class:`logbook.more.FingersCrossedHandler` now is set to
  `ERROR` by default and has the ability to create new loggers
  from a factory function.
- Implemented maximum buffer size for the
  :class:`logbook.more.FingersCrossedHandler` as well as a lock
  for thread safety.